@@ -15,3 +15,5 @@ Deleted Create Technicians Action in manifest.php.
 Added Manage Technicians Action in manifest.php.
 Added issues_manage_technicians.php.
 Added issues_techniciansDeleteProcess.php.
+Fixed 2 issues with the table in issues_manage_technicians.php
+Fixed an issues with the drop down menu in issues_createTechnicians.php where you could make a technician a technician. 
